--- a/talks/index.html
+++ b/talks/index.html
@@ -29,357 +29,273 @@
     <tr>
         <th></th>
         <th>Conference</th>
+        <th>Talk</th>
         <th>When</th>
-        <th>What</th>
-        <th>Video</th>
-        <th>Materials</th>
+        <th>Where</th>
+        <!--<th>Video</th>
+        <th>Materials</th>-->
     </tr>
     </thead>
     <tbody>
-    <!--
-4.11.2017 "A Hitchhiker's Guide to the Functional Exception Handling in Java", JavaDay, Kiev, Ukraine
-
-
-
-
-    -->
     <tr>
         <td>37.</td>
-        <td data-location="50.448875,30.540683" data-place="Kiev">JavaDay</td>
-        <td>04.11.2017</td>
+        <td data-location="50.448875,30.540683" data-place="Parkovy Conference Center">JavaDay</td>
         <td><a href="http://javaday.org.ua/kyiv/">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>04.11.2017</td>
+        <td>Kiev/Ukraine</td>
     </tr>
     <tr>
         <td>36.</td>
-        <td data-location="50.059208,19.943648" data-place="Kraków">JDD</td>
-        <td>03.10.2017</td>
+        <td data-location="50.059749,20.008963" data-place="EXPO Cracow">JDD</td>
         <td><a href="https://jdd.org.pl">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>03.10.2017</td>
+        <td>Cracow/Poland</td>
     </tr>
     <tr>
         <td>35.</td>
-        <td data-location="49.774878,24.030280" data-place="Lviv">JUG Lviv</td>
-        <td>14.09.2017</td>
+        <td data-location="49.802881,24.011409" data-place="Symphony Solutions">JUG Lviv</td>
         <td><a href="http://www.jug.lviv.ua">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>14.09.2017</td>
+        <td>Lviv/Ukraine</td>
     </tr>
     <tr>
         <td>34.</td>
-        <td data-location="35.552030,23.777177" data-place="Kolymbari">JCrete</td>
-        <td>17.07.2017</td>
+        <td data-location="35.552030,23.777177" data-place="Orthodox Academy of Crete">JCrete</td>
         <td><a href="http://www.jcrete.org">Functional Java - Discussion Panel</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>17.07.2017</td>
+        <td>Kolymbari/Greece</td>
     </tr>
     <tr>
         <td>33.</td>
-        <td data-location="52.240929,21.018974" data-place="Warsaw">Confitura</td>
-        <td>01.07.2017</td>
+        <td data-location="52.200727,21.045776" data-place="Bobrowiecka Conference Center">Confitura</td>
         <td><a href="https://2017.confitura.pl">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>01.07.2017</td>
+        <td>Warsaw/Poland</td>
     </tr>
     <tr>
         <td>32.</td>
-        <td data-location="50.059208,19.943648" data-place="Kraków">DevoxxPL</td>
-        <td>21.06.2017</td>
+        <td data-location="50.048165,19.931766" data-place="ICE Cracow">DevoxxPL</td>
         <td><a href="http://devoxx.pl">Vavr by Example</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>21.06.2017</td>
+        <td>Cracow/Poland</td>
     </tr>
     <tr>
         <td>31.</td>
-        <td data-location="41.359554,2.129277" data-place="Barcelona">JBCNConf</td>
-        <td>19.06.2017</td>
+        <td data-location="41.359554,2.129277" data-place="Gran Via 2">JBCNConf</td>
         <td><a href="http://www.jbcnconf.com/2017/">Vavr - Functional Java Done Right</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>19.06.2017</td>
+        <td>Barcelona/Spain</td>
     </tr>
     <tr>
         <td>30.</td>
-        <td data-location="56.946354, 24.116537" data-place="Riga">RigaDevDays</td>
+        <td data-location="56.946354, 24.116537" data-place="Forum Cinemas">RigaDevDays</td>
+        <td><a href="https://rigadevdays.lv">Vavr - Functional Java Done Right</a></td>
         <td>15.05.2017</td>
-        <td><a href="https://rigadevdays.lv">Javaslang - Functional Java Done Right</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>Riga/Latvia</td>
     </tr>
     <tr>
         <td>29.</td>
-        <td data-location="46.005145,8.956409" data-place="Lugano">VoxxedDaysTicino</td>
+        <td data-location="46.005145,8.956409" data-place="Palazzo Congressi">VoxxedDaysTicino</td>
+        <td><a href="https://voxxeddays.com/ticino17/">Vavr - Functional Java Done Right</a></td>
         <td>06.05.2017</td>
-        <td><a href="https://voxxeddays.com/ticino17/">Javaslang - Functional Java Done Right</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>Lugano/Switzerland</td>
     </tr>
     <tr>
         <td>28.</td>
-        <td data-location="51.746946,19.453665" data-place="Łódź">JUG Łódź</td>
-        <td>23.03.2017</td>
+        <td data-location="51.746946,19.453665" data-place="Lodz University of Technology">JUG Łódź</td>
         <td><a href="http://www.juglodz.pl">Javaslang - livecoding session</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>23.03.2017</td>
+        <td>Lodz/Poland</td>
     </tr>
     <tr>
         <td>27.</td>
-        <td data-location="47.358192,8.523817" data-place="Zurich">VoxxedDaysZurich</td>
-        <td>23.02.2017</td>
+        <td data-location="47.358192,8.523817" data-place="Sihlcity">VoxxedDaysZurich</td>
         <td><a href="https://voxxeddays.com/zurich17/">Javaslang - Functional Java Done Right</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>23.02.2017</td>
+        <td>Zurich/Switzerland</td>
     </tr>
     <tr>
         <td>26.</td>
-        <td data-location="49.774878,24.030280" data-place="Lviv">Morning@Lohika</td>
-        <td>11.02.2017</td>
+        <td data-location="49.853299,24.024658" data-place="Lohika">Morning@Lohika</td>
         <td><a href="http://morning.lohika.com">Functional Java - livecoding session</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>11.02.2017</td>
+        <td>Lviv/Ukraine</td>
     </tr>
     <tr>
         <td>25.</td>
-        <td data-location="52.211246,20.981811" data-place="Warsaw">Warsaw JUG #194</td>
-        <td>10.01.2017</td>
+        <td data-location="52.211838,20.982262" data-place="MiMUW">Warsaw JUG #194</td>
         <td><a href="https://warszawa.jug.pl/">Java 9 Stream/Optional API Additions</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>10.01.2017</td>
+        <td>Warsaw/Poland</td>
     </tr>
     <tr>
         <td>24.</td>
-        <td data-location="53.010468,18.594269" data-place="Toruń">ToruńJUG</td>
-        <td>30.11.2016</td>
+        <td data-location="53.010468,18.594269" data-place="UMK Toruń">ToruńJUG</td>
         <td><a href="http://torun.jug.pl">Javaslang - Functional Java Done Right</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>30.11.2016</td>
+        <td>Torun/Poland</td>
     </tr>
     <tr>
         <td>23.</td>
-        <td data-location="50.448875,30.540683" data-place="Kiev">BuildStuffUA</td>
-        <td>22.11.2016</td>
+        <td data-location="50.433394,30.520315" data-place="National Sports Complex “Olympiyskiy”">BuildStuffUA</td>
         <td><a href="http://www.buildstuff.com.ua/kiev/">Javaslang - Functional Java Done Right</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>22.11.2016</td>
+        <td>Kiev/Ukraine</td>
     </tr>
     <tr>
         <td>22.</td>
-        <td data-location="54.696440, 25.275527" data-place="Vilnius">BuildStuffLT</td>
-        <td>16.11.2016</td>
+        <td data-location="54.696440, 25.275527" data-place="Radisson Blu">BuildStuffLT</td>
         <td><a href="http://buildstuff.lt">Javaslang - Functional Java Done Right</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>16.11.2016</td>
+        <td>Vilnius/Lithuania</td>
     </tr>
     <tr>
         <td>21.</td>
-        <td data-location="51.246126,4.418441" data-place="Antwerp">DevoxxBE</td>
-        <td>08.11.2016</td>
+        <td data-location="51.246126,4.418441" data-place="Kinepolis">DevoxxBE</td>
         <td><a href="https://devoxx.ma">Javaslang - Functional Java Done Right</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>08.11.2016</td>
+        <td>Antwerp/Belgium</td>
     </tr>
     <tr>
         <td>20.</td>
-        <td data-location="33.574322,-7.683728" data-place="Casablanca">DevoxxMA</td>
-        <td>01.11.2016</td>
+        <td data-location="33.574322,-7.683728" data-place="Studio Des Arts Vivants">DevoxxMA</td>
         <td><a href="https://devoxx.ma">Javaslang - Functional Java Done Right</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>01.11.2016</td>
+        <td>Casablanca/Morocco</td>
     </tr>
     <tr>
         <td>19.</td>
-        <td data-location="50.448875,30.540683" data-place="Kiev">JavaDay</td>
-        <td>14.10.2016</td>
+        <td data-location="50.448875,30.540683" data-place="Parkovy Conference Center">JavaDay</td>
         <td><a href="http://javaday.org.ua/kyiv/">Javaslang - Functional Java Done Right</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>14.10.2016</td>
+        <td>Kiev/Ukraine</td>
     </tr>
     <tr>
         <td>18.</td>
-        <td data-location="50.059208,19.943648" data-place="Kraków">JDD</td>
-        <td>10.10.2016</td>
+        <td data-location="50.059208,19.943648" data-place="DoubleTree by Hilton">JDD</td>
         <td><a href="http://16.jdd.org.pl">Javaslang - Functional Java Done Right</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>10.10.2016</td>
+        <td>Cracow/Poland</td>
     </tr>
     <tr>
         <td>17.</td>
-        <td data-location="52.211246,20.981811" data-place="Warsaw">WarsawJUG #185</td>
-        <td>27.09.2016</td>
+        <td data-location="52.211838,20.982262" data-place="MiMUW">WarsawJUG #185</td>
         <td><a href="https://warszawa.jug.pl">Javaslang - Functional Java Done Right</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>27.09.2016</td>
+        <td>Warsaw/Poland</td>
     </tr>
     <tr>
         <td>16.</td>
-        <td data-location="49.774878,24.030280" data-place="Lviv">JDayLviv</td>
-        <td>03.09.2016</td>
+        <td data-location="49.774878,24.030280" data-place="Arena Lviv">JDayLviv</td>
         <td><a href="http://www.jday.com.ua">Javaslang - Functional Java Done Right</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>03.09.2016</td>
+        <td>Lviv/Ukraine</td>
     </tr>
     <tr>
         <td>15.</td>
-        <td data-location="46.467029,30.762330" data-place="Odessa">BuildStuff Odessa</td>
-        <td>08.07.2016</td>
+        <td data-location="46.467029,30.762330" data-place="Otrada Beach Club">BuildStuff Odessa</td>
         <td><a href="http://www.buildstuff.com.ua/odessa/">Functional Programming tools in Java8 Workshop</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>08.07.2016</td>
+        <td>Odessa/Ukraine</td>
     </tr>
     <tr>
         <td>14.</td>
-        <td data-location="52.240929,21.018974" data-place="Warsaw">Confitura</td>
-        <td>02.07.2016</td>
+        <td data-location="52.200727,21.045776" data-place="Bobrowiecka Conference Center">Confitura</td>
         <td><a href="https://2016.confitura.pl">Javaslang - Functional Java Done Right</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>02.07.2016</td>
+        <td>Warsaw/Poland</td>
     </tr>
     <tr>
         <td>13.</td>
-        <td data-location="50.041927,21.998888" data-place="Rzeszów">Kariera IT</td>
+        <td data-location="50.041927,21.998888" data-place="Hotel Rzeszow">Kariera IT</td>
+        <td><a href="http://careercon.pl/en/conference/kariera-it-rzeszow-18-06-2015/">Java Wars VIII: The Function Awakens</a></td>
         <td>18.06.2016</td>
-        <td><a href="http://careercon.pl/en/conference/kariera-it-rzeszow-18-06-2015/">Java Wars VIII: The Function
-            Awakens</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>Rzeszow/Poland</td>
     </tr>
     <tr>
         <td>12.</td>
-        <td data-location="53.915288,27.571242" data-place="Minsk">JavaDayBY</td>
-        <td>11.06.2016</td>
+        <td data-location="53.915288,27.571242" data-place="VERH">JavaDayBY</td>
         <td><a href="https://javaday.by">Java Wars VIII: The Function Awakens</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>11.06.2016</td>
+        <td>Minsk/Belarus</td>
     </tr>
     <tr>
         <td>11.</td>
-        <td data-location="50.448875,30.540683" data-place="Kiev">JEEConf</td>
-        <td>20.05.2016</td>
+        <td data-location="50.448875,30.540683" data-place="Parkovy Conference Center">JEEConf</td>
         <td><a href="http://jeeconf.com">Java Wars VIII: The Function Awakens</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>20.05.2016</td>
+        <td>Kiev/Ukraine</td>
     </tr>
     <tr>
         <td>10.</td>
-        <td data-location="53.448489,14.491266" data-place="Szczecin">DevCrowd</td>
-        <td>23.04.2016</td>
+        <td data-location="53.448489,14.491266" data-place="West Pomeranian University of Technology">DevCrowd</td>
         <td><a href="http://devcrowd.pl">Java Wars VIII: The Function Awakens</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>23.04.2016</td>
+        <td>Szczecin/Poland</td>
     </tr>
     <tr>
         <td>9.</td>
-        <td data-location="51.108534,17.039074" data-place="Wrocław">Kariera IT</td>
+        <td data-location="51.108534,17.039074" data-place="Hotel Mercure">Kariera IT</td>
+        <td><a href="http://careercon.pl/konferencja/kariera-it-wroclaw-16-04-2016/">Java Wars VIII: The Function Awakens</a></td>
         <td>16.04.2016</td>
-        <td><a href="http://careercon.pl/konferencja/kariera-it-wroclaw-16-04-2016/">Java Wars VIII: The Function
-            Awakens</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>Wroclaw/Poland</td>
     </tr>
     <tr>
         <td>8.</td>
-        <td data-location="52.240929,21.018974" data-place="Warsaw">4Developers</td>
-        <td>11.04.2016</td>
+        <td data-location="52.181330,20.971640" data-place="Hotel Gromada Warsaw Airport">4Developers</td>
         <td><a href="http://2016.4developers.org.pl/en/">Java Wars VIII: The Function Awakens</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>11.04.2016</td>
+        <td>Warsaw/Poland</td>
     </tr>
     <tr>
         <td>7.</td>
-        <td data-location="50.059208,19.943648" data-place="Kraków">Kariera IT</td>
+        <td data-location="50.059208,19.943648" data-place="Holiday Inn Krakow City Centre">Kariera IT</td>
+        <td><a href="http://careercon.pl/en/conference/kariera-it-krakow-09-04-2016/">Java Wars VIII: The Function Awakens</a></td>
         <td>09.04.2016</td>
-        <td><a href="http://careercon.pl/en/conference/kariera-it-krakow-09-04-2016/">Java Wars VIII: The Function
-            Awakens</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>Cracow/Poland</td>
     </tr>
     <tr>
         <td>6.</td>
-        <td data-location="52.211246,20.981811" data-place="Warsaw">WarsawJUG #178</td>
-        <td>29.03.2016</td>
+        <td data-location="52.211838,20.982262" data-place="MiMUW">WarsawJUG #178</td>
         <td>Java 8 vs. Checked Exceptions</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>29.03.2016</td>
+        <td>Warsaw/Poland</td>
     </tr>
     <tr>
         <td>5.</td>
-        <td data-location="52.240929,21.018974" data-place="Warsaw">Kariera IT</td>
+        <td data-location="52.238753,21.043570" data-place="PGE Narodowy">Kariera IT</td>
+        <td><a href="http://careercon.pl/konferencja/kariera-it-warszawa-05-03-2016/">Java Wars VIII: The FunctionAwakens</a></td>
         <td>05.03.2016</td>
-        <td><a href="http://careercon.pl/konferencja/kariera-it-warszawa-05-03-2016/">Java Wars VIII: The Function
-            Awakens</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>Warsaw/Poland</td>
     </tr>
     <tr>
         <td>4.</td>
-        <td data-location="49.774878,24.030280" data-place="Lviv">JDayLviv</td>
-        <td>19.09.2015</td>
+        <td data-location="49.774878,24.030280" data-place="Arena Lviv">JDayLviv</td>
         <td><a href="">Functional programming concepts in Java 8</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>19.09.2015</td>
+        <td>Lviv/Ukraine</td>
     </tr>
 
     <tr>
         <td>3.</td>
-        <td data-location="52.240929,21.018974" data-place="Warsaw">Confitura</td>
-        <td>04.07.2015</td>
+        <td data-location="52.240929,21.018974" data-place="University of Warsaw">Confitura</td>
         <td><a href="">Java 8: Lambdas && Monads</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>04.07.2015</td>
+        <td>Warsaw/Poland</td>
     </tr>
     <tr>
         <td>2.</td>
-        <td data-location="52.211246,20.981811" data-place="Warsaw">Jinkubator</td>
-        <td>12.05.2015</td>
+        <td data-location="52.211838,20.982262" data-place="MiMUW">Jinkubator</td>
         <td><a href="http://jinkubator.pl/#/meeting/29">Java 8: Lambdas, Monads and Java Collections</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>12.05.2015</td>
+        <td>Warsaw/Poland</td>
     </tr>
     <tr>
         <td>1.</td>
-        <td data-location="52.212833,20.959682" data-place="Warsaw">TouK Weekly Workshops</td>
-        <td>28.03.2014</td>
+        <td data-location="52.212833,20.959682" data-place="TouK">TouK Weekly Workshops</td>
         <td><a href="http://touk.pl">Intellij IDEA Advanced Code Folding</a></td>
-        <td>&nbsp;</td>
-        <td>&nbsp;
-        </td>
+        <td>28.03.2014</td>
+        <td>Warsaw/Poland</td>
     </tr>
     </tbody>
 </table>
