--- a/talks/index.html
+++ b/talks/index.html
@@ -38,6 +38,47 @@
     </thead>
     <tbody>
     <tr>
+        <td colspan="5" align="center">UPCOMING</td>
+    </tr>
+    <tr>
+        <td>*42.</td>
+        <td data-location="54.997669,82.747713" data-place="Novosibirsk">Novosibirsk Expo Centre</td>
+        <td><a href="https://www.codefest.ru">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
+        <td>31.03.2018</td>
+        <td>Novosibirsk/Russia</td>
+    </tr>
+    <tr>
+        <td>*41.</td>
+        <td data-location="45.195714,5.708412" data-place="Minatec">SnowCamp</td>
+        <td><a href="https://snowcamp.io/en/">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
+        <td>25.01.2018</td>
+        <td>Grenoble/France</td>
+    </tr>
+    <tr>
+        <td>*40.</td>
+        <td data-location="45.195714,5.708412" data-place="Minatec">SnowCamp</td>
+        <td><a href="https://snowcamp.io/en/">Functional Java [HOL]</a></td>
+        <td>24.01.2018</td>
+        <td>Grenoble/France</td>
+    </tr>
+    <tr>
+        <td>*39.</td>
+        <td data-location="51.245200,22.540561" data-place="UMCS University">Lublin JUG</td>
+        <td><a href="https://www.meetup.com/Lublin-Java-User-Group/events/245133338/">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
+        <td>09.01.2018</td>
+        <td>Lublin/Poland</td>
+    </tr>
+    <tr>
+        <td>*38.</td>
+        <td data-location="53.131693,23.160579" data-place="Explorer HQ">jSession</td>
+        <td><a href="http://jsession.pl">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
+        <td>06.12.2017</td>
+        <td>Białystok/Poland</td>
+    </tr>
+    <tr>
+        <td colspan="5" align="center">PAST</td>
+    </tr>
+    <tr>
         <td>37.</td>
         <td data-location="50.448875,30.540683" data-place="Parkovy Conference Center">JavaDay</td>
         <td><a href="http://javaday.org.ua/kyiv/">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
