--- a/talks/index.html
+++ b/talks/index.html
@@ -41,11 +41,18 @@
         <td colspan="5" align="center">UPCOMING</td>
     </tr>
     <tr>
-        <td>*42.</td>
+        <td>*43.</td>
         <td data-location="54.997669,82.747713" data-place="Novosibirsk">Novosibirsk Expo Centre</td>
         <td><a href="https://www.codefest.ru">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
         <td>31.03.2018</td>
         <td>Novosibirsk/Russia</td>
+    </tr>
+    <tr>
+        <td>*42.</td>
+        <td data-location="47.358192,8.523817" data-place="Sihlcity">VoxxedDaysZurich</td>
+        <td><a href="https://voxxeddays.com/zurich18/">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
+        <td>08.03.2018</td>
+        <td>Zurich/Switzerland</td>
     </tr>
     <tr>
         <td>*41.</td>
