--- a/talks/index.html
+++ b/talks/index.html
@@ -38,7 +38,7 @@
     </thead>
     <tbody>
     <tr>
-        <td colspan="5" align="center">UPCOMING</td>
+        <td style="background: #ffffff" colspan="5" align="center">UPCOMING</td>
     </tr>
     <tr>
         <td>*43.</td>
@@ -83,7 +83,7 @@
         <td>Białystok/Poland</td>
     </tr>
     <tr>
-        <td colspan="5" align="center">PAST</td>
+        <td style="background: #ffffff" colspan="5" align="center">PAST</td>
     </tr>
     <tr>
         <td>37.</td>
