Separate talks by years

--- a/talks/index.html
+++ b/talks/index.html
@@ -80,6 +80,9 @@
         <td style="background: #ffffff" colspan="5" align="center">PAST</td>
     </tr>
     <tr>
+        <td style="background: #ffffff" colspan="5" align="center">2017</td>
+    </tr>
+    <tr>
         <td>38.</td>
         <td data-location="53.131693,23.160579" data-place="Explorer HQ">jSession</td>
         <td><a href="http://jsession.pl">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
@@ -176,6 +179,9 @@
         <td><a href="https://warszawa.jug.pl/">Java 9 Stream/Optional API Additions</a></td>
         <td>10.01.2017</td>
         <td>Warsaw/Poland</td>
+    </tr>
+    <tr>
+        <td style="background: #ffffff" colspan="5" align="center">2016</td>
     </tr>
     <tr>
         <td>24.</td>
@@ -318,6 +324,9 @@
         <td>Warsaw/Poland</td>
     </tr>
     <tr>
+        <td style="background: #ffffff" colspan="5" align="center">2015</td>
+    </tr>
+    <tr>
         <td>4.</td>
         <td data-location="49.774878,24.030280" data-place="Arena Lviv">JDayLviv</td>
         <td><a href="">Functional programming concepts in Java 8</a></td>
@@ -338,6 +347,9 @@
         <td><a href="http://jinkubator.pl/#/meeting/29">Java 8: Lambdas, Monads and Java Collections</a></td>
         <td>12.05.2015</td>
         <td>Warsaw/Poland</td>
+    </tr>
+    <tr>
+        <td style="background: #ffffff" colspan="5" align="center">2014</td>
     </tr>
     <tr>
         <td>1.</td>
