--- a/talks/index.html
+++ b/talks/index.html
@@ -43,7 +43,7 @@
     </tr>
     <tr>
         <td>*43.</td>
-        <td data-location="54.997669,82.747713" data-place="Novosibirsk">Novosibirsk Expo Centre</td>
+        <td data-location="54.997669,82.747713" data-place="Novosibirsk Expo Center">CodeFest 2017</td>
         <td><a href="https://www.codefest.ru">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
         <td>31.03.2018</td>
         <td>Novosibirsk/Russia</td>
