--- a/talks/hall-of-fame/index.html
+++ b/talks/hall-of-fame/index.html
@@ -24,7 +24,7 @@
 
 </script>
 
-<div>
+<div align="center">
     <img src="img/1.png" width="800"/>
     <img src="img/2.png" width="800"/>
     <img src="img/3.png" width="800"/>
