Add feedback after a training

--- a/talks/hall-of-fame/index.html
+++ b/talks/hall-of-fame/index.html
@@ -73,7 +73,7 @@
     <img src="img/46.png" width="800"/>
     <img src="img/47.png" width="800"/>
     <img src="img/48.png" width="800"/>
-
+    <img src="img/49.png" width="800"/>
 </div>
 
 </body>
