--- a/talks/index.html
+++ b/talks/index.html
@@ -42,35 +42,35 @@
         <td style="background: #ffffff" colspan="5" align="center">UPCOMING</td>
     </tr>
     <tr>
-        <td>*43.</td>
+        <td>*44.</td>
         <td data-location="54.997669,82.747713" data-place="Novosibirsk Expo Center">CodeFest 2017</td>
         <td><a href="https://www.codefest.ru">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
         <td>31.03.2018</td>
         <td>Novosibirsk/Russia</td>
     </tr>
     <tr>
-        <td>*42.</td>
+        <td>*43.</td>
         <td data-location="47.358192,8.523817" data-place="Sihlcity">VoxxedDaysZurich</td>
         <td><a href="https://voxxeddays.com/zurich18/">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
         <td>08.03.2018</td>
         <td>Zurich/Switzerland</td>
     </tr>
     <tr>
-        <td>*41.</td>
+        <td>*42.</td>
         <td data-location="45.195714,5.708412" data-place="Minatec">SnowCamp</td>
         <td><a href="https://snowcamp.io/en/">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
         <td>25.01.2018</td>
         <td>Grenoble/France</td>
     </tr>
     <tr>
-        <td>*40.</td>
+        <td>*41.</td>
         <td data-location="45.195714,5.708412" data-place="Minatec">SnowCamp</td>
         <td><a href="https://snowcamp.io/en/">Functional Java [HOL]</a></td>
         <td>24.01.2018</td>
         <td>Grenoble/France</td>
     </tr>
     <tr>
-        <td>*39.</td>
+        <td>*40.</td>
         <td data-location="51.245200,22.540561" data-place="UMCS University">Lublin JUG</td>
         <td><a href="https://www.meetup.com/Lublin-Java-User-Group/events/245133338/">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
         <td>09.01.2018</td>
@@ -83,11 +83,18 @@
         <td style="background: #ffffff" colspan="5" align="center">2017</td>
     </tr>
     <tr>
+        <td>39.</td>
+        <td data-location="52.226501,20.999614" data-place="Sages">StacjaIT</td>
+        <td><a href="http://stacja.it">Wprowadzenie do programowania funkcyjnego w Javie</a></td>
+        <td>09.12.2017</td>
+        <td>Warsaw/Poland</td>
+    </tr>
+    <tr>
         <td>38.</td>
         <td data-location="53.131693,23.160579" data-place="Explorer HQ">jSession</td>
         <td><a href="http://jsession.pl">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
         <td>06.12.2017</td>
-        <td>Białystok/Poland</td>
+        <td>Bialystok/Poland</td>
     </tr>
     <tr>
         <td>37.</td>
