--- a/talks/hall-of-fame/index.html
+++ b/talks/hall-of-fame/index.html
@@ -74,6 +74,8 @@
     <img src="img/47.png" width="800"/>
     <img src="img/48.png" width="800"/>
     <img src="img/49.png" width="800"/>
+    <img src="img/50.png" width="800"/>
+    <img src="img/51.png" width="800"/>
 </div>
 
 </body>
