--- a/talks/hall-of-fame/index.html
+++ b/talks/hall-of-fame/index.html
@@ -76,6 +76,7 @@
     <img src="img/49.png" width="800"/>
     <img src="img/50.png" width="800"/>
     <img src="img/51.png" width="800"/>
+    <img src="img/52.png" width="800"/>
 </div>
 
 </body>
