--- a/talks/hall-of-fame/index.html
+++ b/talks/hall-of-fame/index.html
@@ -77,6 +77,7 @@
     <img src="img/50.png" width="800"/>
     <img src="img/51.png" width="800"/>
     <img src="img/52.png" width="800"/>
+    <img src="img/53.png" width="800"/>
 </div>
 
 </body>
