Remove TouK mentions

--- a/talks/functional-exception-handling/index.html
+++ b/talks/functional-exception-handling/index.html
@@ -69,7 +69,7 @@
         <section>
             <h1>Software Engineer | Trainer</h1>
             <h2>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h2>
-            <h3>Software Engineer @ <a href="http://touk.pl/">TouK</a></h3>
+            <h3>Software Engineer</h3>
             <h3>OS Contributor</h3>
             <h3>DZone MVB</h3>
         </section>
@@ -477,7 +477,7 @@
 
         <section>
             <pre><code data-trim="">
-                Either&lt;FetchError, List&lt;URL>> result = getSearchResults("touk")
+                Either&lt;FetchError, List&lt;URL>> result = getSearchResults("foo")
             </code></pre>
             <pre><code data-trim="">
                 result.right()
