Add Java Tweeps

--- a/talks/hall-of-fame/index.html
+++ b/talks/hall-of-fame/index.html
@@ -78,6 +78,7 @@
     <img src="img/51.png" width="800"/>
     <img src="img/52.png" width="800"/>
     <img src="img/53.png" width="800"/>
+    <img src="img/54.png" width="800"/>
 </div>
 
 </body>
