Update Functional Exception Handling talk

--- a/talks/functional-exception-handling/index.html
+++ b/talks/functional-exception-handling/index.html
@@ -519,8 +519,6 @@
 
         <section>
             <h2>What if your language does not support that?</h2>
-            <h3>Switch language.</h3>
-            <h3>Build it yourself.</h3>
             <h3>Use vavr.io (formerly known as Javaslang)</h3>
             <h3>Take part in Java Community Process</h3>
         </section>
@@ -528,10 +526,10 @@
         <section>
             <h2>Key takeaways</h2>
             <ul>
-                <li>Exceptions work best when you do not expect people to recover from them</li>
+                <li>Exceptions work best when you don't expect people to recover from them</li>
                 <li>Try can be used for representing computations that may throw an exception</li>
-                <li>Absence can be modelled with Option</li>
-                <li>Either can be used for advanced scenarios involving error objects and modeling alternative paths</li>
+                <li>Absence can be modelled with Option instead of NoSuchElementException</li>
+                <li>Either can be used for advanced scenarios involving custom error objects and modeling alternative paths</li>
                 <li>VAVR is the new Guava</li>
             </ul>
         </section>
