Update Functional Exception Handling talk

--- a/talks/functional-exception-handling/index.html
+++ b/talks/functional-exception-handling/index.html
@@ -518,7 +518,7 @@
         </section>
 
         <section>
-            <h2>What if your language does not support that?</h2>
+            <h2>What if your language(Java.) does not support that?</h2>
             <h3>Use vavr.io (formerly known as Javaslang)</h3>
             <h3>Take part in Java Community Process</h3>
         </section>
