--- a/talks/index.html
+++ b/talks/index.html
@@ -42,6 +42,13 @@
         <td style="background: #ffffff" colspan="5" align="center">UPCOMING</td>
     </tr>
     <tr>
+        <td>*45.</td>
+        <td data-location="56.946354, 24.116537" data-place="Forum Cinemas">RigaDevDays</td>
+        <td><a href="https://rigadevdays.lv">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
+        <td>29.05.2018</td>
+        <td>Riga/Latvia</td>
+    </tr>
+    <tr>
         <td>*44.</td>
         <td data-location="54.997669,82.747713" data-place="Novosibirsk Expo Center">CodeFest 2017</td>
         <td><a href="https://www.codefest.ru">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
