Add Java - Tips, Tricks, Hacks, and Bugs

--- a/talks/kotlin-collections-antipatterns/index.html
+++ b/talks/kotlin-collections-antipatterns/index.html
@@ -70,11 +70,10 @@
 
         <section>
             <h1>Software Engineer | Trainer</h1>
-            <h3>Software Engineer @ <a href="http://touk.pl/">TouK</a></h3>
-            <h3>blogger @ <a href="http://4comprehension.com/">4comprehension.com</a></h3>
-            <h3>senior editor @ <a href="http://baeldung.com/">Baeldung</a></h3>
-            <h3>commiter @ <a href="http://joel-costigliola.github.io/assertj/">AssertJ</a>, <a
-                    href="http://www.vavr.io">Vavr</a></h3>
+            <h2>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h2>
+            <h3>System Developer @ <a href="http://casumocareers.com">Casumo</a></h3>
+            <h3>OS Contributor</h3>
+            <h3>DZone MVB</h3>
         </section>
 
     </div>
