--- a/talks/java-tips-tricks-hacks-bugs/index.html
+++ b/talks/java-tips-tricks-hacks-bugs/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Java 8 - The Bad Parts</title>
+    <title>Java - Tips, Tricks, Hacks, and Bugs</title>
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -61,7 +61,7 @@
 
 
         <section>
-            <h1>Java 8 - The Bad Parts</h1>
+            <h1>Java - Tips, Tricks, Hacks, and Bugs</h1>
             <h2><a href="http://pivovarit.github.io"> Grzegorz Piwowarek</a></h2>
             <h2><a href="http://twitter.com/pivovarit">@pivovarit</a></h2>
         </section>
