--- a/talks/index.html
+++ b/talks/index.html
@@ -41,12 +41,19 @@
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">UPCOMING</td>
     </tr>
-    <tr>
-        <td>*45.</td>
+        <tr>
+        <td>*46.</td>
         <td data-location="56.946354, 24.116537" data-place="Forum Cinemas">RigaDevDays</td>
         <td><a href="https://rigadevdays.lv">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
         <td>29.05.2018</td>
         <td>Riga/Latvia</td>
+    </tr>
+    <tr>
+        <td>*45.</td>
+        <td data-location="53.890136, 27.569410" data-place="Event Space @ Minsk">Belarus JUG</td>
+        <td><a href="http://belarusjug.org">Functional Java with Vavr</a></td>
+        <td>26.04.2018</td>
+        <td>Minsk/Belarus</td>
     </tr>
     <tr>
         <td>*44.</td>
@@ -76,18 +83,19 @@
         <td>24.01.2018</td>
         <td>Grenoble/France</td>
     </tr>
-    <tr>
-        <td>*40.</td>
-        <td data-location="51.245200,22.540561" data-place="UMCS University">Lublin JUG</td>
-        <td><a href="https://www.meetup.com/Lublin-Java-User-Group/events/245133338/">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
-        <td>09.01.2018</td>
-        <td>Lublin/Poland</td>
-    </tr>
+   
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">PAST</td>
     </tr>
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">2017</td>
+    </tr>
+    <tr>
+        <td>40.</td>
+        <td data-location="51.245200,22.540561" data-place="UMCS University">Lublin JUG</td>
+        <td><a href="https://www.meetup.com/Lublin-Java-User-Group/events/245133338/">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
+        <td>09.01.2018</td>
+        <td>Lublin/Poland</td>
     </tr>
     <tr>
         <td>39.</td>
