--- a/talks/hall-of-fame/index.html
+++ b/talks/hall-of-fame/index.html
@@ -80,6 +80,8 @@
     <img src="img/53.png" width="800"/>
     <img src="img/55.png" width="800"/>
     <img src="img/54.png" width="800"/>
+    <img src="img/55.png" width="800"/>
+    <img src="img/56.png" width="800"/>
 </div>
 
 </body>
