--- a/talks/index.html
+++ b/talks/index.html
@@ -33,8 +33,6 @@
         <th>Talk</th>
         <th>When</th>
         <th>Where</th>
-        <!--<th>Video</th>
-        <th>Materials</th>-->
     </tr>
     </thead>
     <tbody>
@@ -42,31 +40,38 @@
         <td style="background: #ffffff" colspan="5" align="center">UPCOMING</td>
     </tr>
         <tr>
-        <td>*46.</td>
+        <td>*47.</td>
         <td data-location="56.946354, 24.116537" data-place="Forum Cinemas">RigaDevDays</td>
         <td><a href="https://rigadevdays.lv">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
         <td>29.05.2018</td>
         <td>Riga/Latvia</td>
     </tr>
     <tr>
-        <td>*45.</td>
+        <td>*46.</td>
         <td data-location="53.890136, 27.569410" data-place="Event Space @ Minsk">Belarus JUG</td>
         <td><a href="http://belarusjug.org">Functional Java with Vavr</a></td>
         <td>26.04.2018</td>
         <td>Minsk/Belarus</td>
     </tr>
     <tr>
-        <td>*44.</td>
+        <td>*45.</td>
         <td data-location="54.997669,82.747713" data-place="Novosibirsk Expo Center">CodeFest 2017</td>
         <td><a href="https://www.codefest.ru">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
         <td>31.03.2018</td>
         <td>Novosibirsk/Russia</td>
     </tr>
     <tr>
-        <td>*43.</td>
+        <td>*44.</td>
         <td data-location="47.358192,8.523817" data-place="Sihlcity">VoxxedDaysZurich</td>
         <td><a href="https://voxxeddays.com/zurich18/">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
         <td>08.03.2018</td>
+        <td>Zurich/Switzerland</td>
+    </tr>
+    <tr>
+        <td>*43.</td>
+        <td data-location="47.358192,8.523817" data-place="Sihlcity">VoxxedDaysZurich</td>
+        <td><a href="https://voxxeddays.com/zurich18/">Functional Java 8+ Workshop</a></td>
+        <td>07.03.2018</td>
         <td>Zurich/Switzerland</td>
     </tr>
     <tr>
