--- a/talks/index.html
+++ b/talks/index.html
@@ -40,39 +40,46 @@
         <td style="background: #ffffff" colspan="5" align="center">UPCOMING</td>
     </tr>
         <tr>
-        <td>*47.</td>
+        <td>*48.</td>
         <td data-location="56.946354, 24.116537" data-place="Forum Cinemas">RigaDevDays</td>
         <td><a href="https://rigadevdays.lv">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
         <td>29.05.2018</td>
         <td>Riga/Latvia</td>
     </tr>
     <tr>
-        <td>*46.</td>
+        <td>*47.</td>
         <td data-location="53.890136, 27.569410" data-place="Event Space @ Minsk">Belarus JUG</td>
         <td><a href="http://belarusjug.org">Functional Java with Vavr</a></td>
         <td>26.04.2018</td>
         <td>Minsk/Belarus</td>
     </tr>
     <tr>
-        <td>*45.</td>
+        <td>*46.</td>
         <td data-location="54.997669,82.747713" data-place="Novosibirsk Expo Center">CodeFest 2017</td>
         <td><a href="https://www.codefest.ru">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
         <td>31.03.2018</td>
         <td>Novosibirsk/Russia</td>
     </tr>
     <tr>
-        <td>*44.</td>
+        <td>*45.</td>
         <td data-location="47.358192,8.523817" data-place="Sihlcity">VoxxedDaysZurich</td>
         <td><a href="https://voxxeddays.com/zurich18/">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
         <td>08.03.2018</td>
         <td>Zurich/Switzerland</td>
     </tr>
     <tr>
-        <td>*43.</td>
+        <td>*44.</td>
         <td data-location="47.358192,8.523817" data-place="Sihlcity">VoxxedDaysZurich</td>
         <td><a href="https://voxxeddays.com/zurich18/">Functional Java 8+ Workshop</a></td>
         <td>07.03.2018</td>
         <td>Zurich/Switzerland</td>
+    </tr>
+    <tr>
+        <td>*43.</td>
+        <td data-location="34.052873,-118.255685" data-place="The Westin Bonaventure Hotel">OracleCode LA</td>
+        <td><a href="https://developer.oracle.com/code/losangeles">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
+        <td>27.02.2018</td>
+        <td>Los Angeles/USA</td>
     </tr>
     <tr>
         <td>*42.</td>
@@ -82,15 +89,14 @@
         <td>Grenoble/France</td>
     </tr>
     <tr>
-        <td>*41.</td>
+        <td style="background: #ffffff" colspan="5" align="center">PAST</td>
+    </tr>
+    <tr>
+        <td>41.</td>
         <td data-location="45.195714,5.708412" data-place="Minatec">SnowCamp</td>
         <td><a href="https://snowcamp.io/en/">Functional Java [HOL]</a></td>
         <td>24.01.2018</td>
         <td>Grenoble/France</td>
-    </tr>
-   
-    <tr>
-        <td style="background: #ffffff" colspan="5" align="center">PAST</td>
     </tr>
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">2017</td>
