--- a/talks/hall-of-fame/index.html
+++ b/talks/hall-of-fame/index.html
@@ -82,6 +82,7 @@
     <img src="img/54.png" width="800"/>
     <img src="img/55.png" width="800"/>
     <img src="img/56.png" width="800"/>
+    <img src="img/57.png" width="800"/>
 </div>
 
 </body>
