Add "44 case classes"

--- a/talks/functional-exception-handling/index.html
+++ b/talks/functional-exception-handling/index.html
@@ -462,7 +462,55 @@
                         result = 31 * result + (response != null ? response.hashCode() : 0);
                         return result;
                     }
-            }
+                }
+            </code></pre>
+        </section>
+        <section>
+            <h2>That's 44 Scala's case classes...</h2>
+            <pre><code data-trim="" style="font-size: 0.6em;line-height: 0.9; max-height: 90%">
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
+                                case class FetchError(msg: String, response: HttpResponse)
             </code></pre>
         </section>
 
