--- a/talks/index.html
+++ b/talks/index.html
@@ -40,18 +40,25 @@
         <td style="background: #ffffff" colspan="5" align="center">UPCOMING</td>
     </tr>
         <tr>
-        <td>*48.</td>
+        <td>*49.</td>
         <td data-location="56.946354, 24.116537" data-place="Forum Cinemas">RigaDevDays</td>
         <td><a href="https://rigadevdays.lv">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
         <td>29.05.2018</td>
         <td>Riga/Latvia</td>
     </tr>
     <tr>
-        <td>*47.</td>
+        <td>*48.</td>
         <td data-location="53.890136, 27.569410" data-place="Event Space @ Minsk">Belarus JUG</td>
         <td><a href="http://belarusjug.org">Functional Java with Vavr</a></td>
         <td>26.04.2018</td>
         <td>Minsk/Belarus</td>
+    </tr>
+    <tr>
+        <td>*47.</td>
+        <td data-location="48.878950,2.283692" data-place="Le Palais des congrès de Paris">DevoxxFR</td>
+        <td><a href="http://devoxx.fr">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
+        <td>19.04.2018</td>
+        <td>Paris/France</td>
     </tr>
     <tr>
         <td>*46.</td>
