--- a/talks/hall-of-fame/index.html
+++ b/talks/hall-of-fame/index.html
@@ -84,6 +84,8 @@
     <img src="img/56.png" width="800"/>
     <img src="img/57.png" width="800"/>
     <img src="img/58.png" width="800"/>
+    <img src="img/59.png" width="800"/>
+    <img src="img/60.png" width="800"/>
 </div>
 
 </body>
