--- a/talks/hall-of-fame/index.html
+++ b/talks/hall-of-fame/index.html
@@ -86,6 +86,7 @@
     <img src="img/58.png" width="800"/>
     <img src="img/59.png" width="800"/>
     <img src="img/60.png" width="800"/>
+    <img src="img/61.png" width="800"/>
 </div>
 
 </body>
