--- a/talks/functional-exception-handling/index.html
+++ b/talks/functional-exception-handling/index.html
@@ -67,9 +67,9 @@
         </section>
 
         <section>
-            <h1>Software Engineer | Trainer</h1>
             <h2>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h2>
-            <h3>Software Engineer</h3>
+            <h3>System Engineer @ <a href="https://www.casumocareers.com">Casumo</a></h3>
+	    <h3>Trainer @ <a href="https://bottega.com.pl">Bottega IT Minds</a></h3>
             <h3>OS Contributor</h3>
             <h3>DZone MVB</h3>
         </section>
