--- a/talks/functional-exception-handling/index.html
+++ b/talks/functional-exception-handling/index.html
@@ -61,7 +61,8 @@
 
 
         <section>
-            <h1>A Hitchhiker's Guide to the Functional Exception Handling in Java</h1>
+	    <h2>A Hitchhiker's Guide to the</h2>
+            <h1>Functional Exception Handling in Java</h1>
             <h2><a href="http://pivovarit.github.io"> Grzegorz Piwowarek</a></h2>
             <h2><a href="http://twitter.com/pivovarit">@pivovarit</a></h2>
         </section>
