--- a/talks/hall-of-fame/index.html
+++ b/talks/hall-of-fame/index.html
@@ -87,6 +87,8 @@
     <img src="img/59.png" width="800"/>
     <img src="img/60.png" width="800"/>
     <img src="img/61.png" width="800"/>
+    <img src="img/62.png" width="800"/>
+
 </div>
 
 </body>
