--- a/talks/index.html
+++ b/talks/index.html
@@ -60,15 +60,13 @@
         <td>08.03.2018</td>
         <td>Zurich/Switzerland</td>
     </tr>
+    <tr><td style="background: #ffffff" colspan="5" align="center">PAST</td></tr>
     <tr>
-        <td>*44.</td>
+        <td>44.</td>
         <td data-location="47.358192,8.523817" data-place="Sihlcity">VoxxedDaysZurich</td>
         <td><a href="https://voxxeddays.com/zurich18/">Functional Java 8+ Workshop</a></td>
         <td>07.03.2018</td>
         <td>Zurich/Switzerland</td>
-    </tr>
-    <tr>
-        <td style="background: #ffffff" colspan="5" align="center">PAST</td>
     </tr>
     <tr>
         <td>43.</td>
