--- a/talks/index.html
+++ b/talks/index.html
@@ -63,7 +63,7 @@
     <tr><td style="background: #ffffff" colspan="5" align="center">PAST</td></tr>
     <tr>
         <td>44.</td>
-        <td data-location="47.358192,8.523817" data-place="Sihlcity">VoxxedDaysZurich</td>
+        <td data-location="47.381980,8.535409" data-place="Digicomp">VoxxedDaysZurich</td>
         <td><a href="https://voxxeddays.com/zurich18/">Functional Java 8+ Workshop</a></td>
         <td>07.03.2018</td>
         <td>Zurich/Switzerland</td>
