--- a/talks/hall-of-fame/index.html
+++ b/talks/hall-of-fame/index.html
@@ -88,7 +88,10 @@
     <img src="img/60.png" width="800"/>
     <img src="img/61.png" width="800"/>
     <img src="img/62.png" width="800"/>
-
+    <img src="img/63.png" width="800"/>
+    <img src="img/64.png" width="800"/>
+    <img src="img/65.png" width="800"/>
+    <img src="img/66.png" width="800"/>
 </div>
 
 </body>
