--- a/talks/index.html
+++ b/talks/index.html
@@ -64,7 +64,7 @@
     <tr>
         <td>44.</td>
         <td data-location="47.381980,8.535409" data-place="Digicomp">VoxxedDaysZurich</td>
-        <td><a href="https://voxxeddays.com/zurich18/">Functional Java 8+ Workshop</a></td>
+        <td><a href="https://voxxeddays.com/zurich18/">Functional Java 8+ [HOL]</a></td>
         <td>07.03.2018</td>
         <td>Zurich/Switzerland</td>
     </tr>
@@ -85,7 +85,7 @@
     <tr>
         <td>41.</td>
         <td data-location="45.195714,5.708412" data-place="Minatec">SnowCamp</td>
-        <td><a href="https://snowcamp.io/en/">Functional Java [HOL]</a></td>
+        <td><a href="https://snowcamp.io/en/">Introduction to Functional Java [HOL]</a></td>
         <td>24.01.2018</td>
         <td>Grenoble/France</td>
     </tr>
