--- a/talks/index.html
+++ b/talks/index.html
@@ -40,11 +40,19 @@
         <td style="background: #ffffff" colspan="5" align="center">UPCOMING</td>
     </tr>
         <tr>
-        <td>47.</td>
+        <td>48.</td>
         <td data-location="56.946354, 24.116537" data-place="Forum Cinemas">RigaDevDays</td>
         <td><a href="https://rigadevdays.lv">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
         <td>29.05.2018</td>
         <td>Riga/Latvia</td>
+    </tr>
+    </tr>
+        <tr>
+        <td>47.</td>
+        <td data-location="50.088853, 19.984622" data-place="Multikino Cracow">GeeCON</td>
+        <td><a href="https://geecon.org">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
+        <td>10.05.2018</td>
+        <td>Cracow/Poland</td>
     </tr>
     <tr>
         <td>46.</td>
