--- a/talks/wip/magicless-persistence-java/index.html
+++ b/talks/wip/magicless-persistence-java/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Kotlin for the Unconvinced</title>
+    <title>Magicless Persistence</title>
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -61,7 +61,7 @@
 
 
         <section>
-            <h1>Kotlin for the Unconvinced</h1>
+            <h1>Magicless Persistence</h1>
             <h2>
                 <a href="http://pivovarit.github.io">Grzegorz Piwowarek</a> | <a href="http://twitter.com/pivovarit">@pivovarit</a>
                 | <a href="http://4comprehension.com/">4comprehension.com</a>
@@ -71,7 +71,8 @@
         <section>
             <h1>Software Engineer | Trainer</h1>
             <h2>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h2>
-            <h3>System Developer @ <a href="http://casumocareers.com">Casumo</a></h3>
+            <h3>Trainer @ <a href="https://bottega.com.pl">Bottega IT Minds</a></h3>
+            <h3>System Engineer @ <a href="http://casumocareers.com">Casumo</a></h3>
             <h3>OS Contributor</h3>
             <h3>DZone MVB</h3>
         </section>
