--- a/talks/wip/kotlin-collections-antipatterns/index.html
+++ b/talks/wip/kotlin-collections-antipatterns/index.html
@@ -71,7 +71,8 @@
         <section>
             <h1>Software Engineer | Trainer</h1>
             <h2>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h2>
-            <h3>System Developer @ <a href="http://casumocareers.com">Casumo</a></h3>
+            <h3>Trainer @ <a href="https://bottega.com.pl">Bottega IT Minds</a></h3>
+            <h3>System Engineer @ <a href="http://casumocareers.com">Casumo</a></h3>
             <h3>OS Contributor</h3>
             <h3>DZone MVB</h3>
         </section>
