--- a/talks/index.html
+++ b/talks/index.html
@@ -49,17 +49,18 @@
     </tr>
         <tr>
         <td>47.</td>
+        <td data-location="-20.223476, 57.495376" data-place="Multikino Cracow">Developers Conference 2018 - Mauritius</td>
+        <td><a href="https://conference.mscc.mu">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
+        <td>18.05.2018</td>
+        <td>Port Louis/Mauritius</td>
+    </tr>
+    </tr>
+        <tr>
+        <td>46.</td>
         <td data-location="50.088853, 19.984622" data-place="Multikino Cracow">GeeCON</td>
         <td><a href="https://geecon.org">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
         <td>10.05.2018</td>
         <td>Cracow/Poland</td>
-    </tr>
-    <tr>
-        <td>46.</td>
-        <td data-location="48.878950,2.283692" data-place="Le Palais des congrès de Paris">DevoxxFR</td>
-        <td><a href="http://devoxx.fr">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
-        <td>19.04.2018</td>
-        <td>Paris/France</td>
     </tr>
     <tr><td style="background: #ffffff" colspan="5" align="center">PAST</td></tr>
     <tr>
