--- a/talks/index.html
+++ b/talks/index.html
@@ -50,7 +50,7 @@
         <tr>
         <td>47.</td>
         <td data-location="-20.223476, 57.495376" data-place="Voila Hotel">Developers Conference 2018 - Mauritius</td>
-        <td><a href="https://conference.mscc.mu">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
+        <td><a href="https://conference.mscc.mu">???</a></td>
         <td>18.05.2018</td>
         <td>Port Louis/Mauritius</td>
     </tr>
