--- a/talks/index.html
+++ b/talks/index.html
@@ -40,14 +40,21 @@
         <td style="background: #ffffff" colspan="5" align="center">UPCOMING</td>
     </tr>
         <tr>
-        <td>48.</td>
+        <td>49.</td>
         <td data-location="56.946354, 24.116537" data-place="Forum Cinemas">RigaDevDays</td>
         <td><a href="https://rigadevdays.lv">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
         <td>29.05.2018</td>
         <td>Riga/Latvia</td>
     </tr>
     </tr>
-        <tr>
+    <tr>
+        <td>48.</td>
+        <td data-location="-20.223476, 57.495376" data-place="Voila Hotel">Developers Conference 2018 - Mauritius</td>
+        <td><a href="https://conference.mscc.mu">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
+        <td>19.05.2018</td>
+        <td>Port Louis/Mauritius</td>
+    </tr>
+    <tr>
         <td>47.</td>
         <td data-location="-20.223476, 57.495376" data-place="Voila Hotel">Developers Conference 2018 - Mauritius</td>
         <td><a href="https://conference.mscc.mu">Vavr By Example</a></td>
