--- a/talks/index.html
+++ b/talks/index.html
@@ -39,6 +39,14 @@
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">UPCOMING</td>
     </tr>
+    <tr>
+        <td>50.</td>
+        <td data-location="50.048165,19.931766" data-place="ICE Cracow">DevoxxPL</td>
+        <td><a href="http://devoxx.pl">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
+        <td>20.06.2018</td>
+        <td>Cracow/Poland</td>
+    </tr>
+    </tr>
         <tr>
         <td>49.</td>
         <td data-location="56.946354, 24.116537" data-place="Forum Cinemas">RigaDevDays</td>
