--- a/talks/index.html
+++ b/talks/index.html
@@ -40,11 +40,18 @@
         <td style="background: #ffffff" colspan="5" align="center">UPCOMING</td>
     </tr>
     <tr>
-        <td>50.</td>
+        <td>51.</td>
         <td data-location="50.048165,19.931766" data-place="ICE Cracow">DevoxxPL</td>
         <td><a href="http://devoxx.pl">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
         <td>20.06.2018</td>
         <td>Cracow/Poland</td>
+    </tr>
+    <tr>
+        <td>50.</td>
+        <td data-location="41.359554,2.129277" data-place="Gran Via 2">JBCNConf</td>
+        <td><a href="http://www.jbcnconf.com/2018/">The Dark Side of Java 8</a></td>
+        <td>12.06.2017</td>
+        <td>Barcelona/Spain</td>
     </tr>
     </tr>
         <tr>
