Update the title

--- a/talks/wip/java-8-lessons-learned/index.html
+++ b/talks/wip/java-8-lessons-learned/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Java 8 - The Bad Parts</title>
+    <title>The Dark Side of Java 8</title>
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
