--- a/talks/hall-of-fame/index.html
+++ b/talks/hall-of-fame/index.html
@@ -93,6 +93,7 @@
     <img src="img/65.png" width="800"/>
     <img src="img/66.png" width="800"/>
     <img src="img/67.png" width="800"/>
+    <img src="img/68.png" width="800"/>
 </div>
 
 </body>
