Add tweet to FEH talk

--- a/talks/functional-exception-handling/index.html
+++ b/talks/functional-exception-handling/index.html
@@ -184,6 +184,10 @@
         </section>
 
         <section>
+            <img src="img/stupid_tests.png" width="1000"/>
+        </section>
+
+        <section>
             <h2>Compile-time checks -> shorter feedback cycles</h2>
             <img src="img/agile.png" width="1000"/>
             <div>
@@ -235,6 +239,7 @@
         <section>
             <h2><a href="http://www.vavr.io">vavr-io</a></h2>
             <h2><a href="https://github.com/aol/cyclops-react">cyclops-react</a></h2>
+            <h2><a href="https://arrow-kt.io">arrow (Kotlin) </a></h2>
         </section>
 
         <section>
