Add no compile no problem slide

--- a/talks/functional-exception-handling/index.html
+++ b/talks/functional-exception-handling/index.html
@@ -198,6 +198,13 @@
         </section>
 
         <section>
+            <img src="img/no_compile_no_problem.png" width="700"/>
+        </section>
+
+        <section>
+        </section>
+
+        <section>
             <h1>Stringly-typed</h1>
             <pre><code data-trim="">
                 public class Person {
