--- a/talks/functional-exception-handling/geecon/index.html
+++ b/talks/functional-exception-handling/geecon/index.html
@@ -186,6 +186,10 @@
         </section>
 
         <section>
+            <img src="img/stupid_tests.png" width="1000"/>
+        </section>
+
+        <section>
             <h2>Compile-time checks -> shorter feedback cycles</h2>
             <img src="img/agile.png" width="1000"/>
             <div>
